<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".Pocetna">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mk"
            android:textSize="25dp"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_igra"
            android:background="#2600c1"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20dp"
            android:layout_margin="25dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uputstvo"
            android:background="#2600c1"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20dp"
            android:layout_margin="25dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_app"
            android:background="#2600c1"
            android:width="300dp"
            android:height="50dp"
            android:textSize="20dp"
            android:layout_margin="25dp"/>
    </LinearLayout>

</FrameLayout>