<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".NovaIgra"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_igra"
            android:textSize="30dp"/>

        //Prve dve labele koje su na pocetku vidljive

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        //Odavde pocinju labele za igrace koje su na pocetku hide-ovane

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LI3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_3"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LI4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_4"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LI5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_5"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LI6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igrac_6"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/zp"
                android:layout_margin="5dp"
                />

            <ImageButton
                android:id="@+id/btnRemove"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/mc"
                android:layout_margin="5dp"
                />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <Button
            android:id="@+id/dalje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dalje"/>
    </LinearLayout>


</LinearLayout>