<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0099cc"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".Parametrizacija">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/izbor_zaustavljanja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:text="@string/zaustavljanje_igre"
            />

        <RadioGroup
            android:layout_marginTop="5dp"
            android:id="@+id/radio_zaustavljanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_automatsko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_boja"
                android:text="@string/automatsko"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_manuelno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_boja"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:text="@string/manuelno_stop" />

        </RadioGroup>

        <View
            android:id="@+id/separator_zaustavljanje"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/izbor_vreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:text="@string/vreme_poteza"/>

        <RadioGroup
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:id="@+id/radio_vreme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:text="@string/_10_sekundi"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radio_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:textSize="17sp"
                    android:layout_marginStart="10dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_20_sekundi" />

                <RadioButton
                    android:id="@+id/radio_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_30_sekundi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_45_sekundi" />

                <RadioButton
                    android:id="@+id/radio_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:textSize="17sp"
                    android:layout_marginStart="10dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_60_sekundi" />

                <RadioButton
                    android:id="@+id/radio_beskonacno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/beskona_no"
                    android:checked="true" />
            </LinearLayout>

        </RadioGroup>

        <View
            android:id="@+id/separator_vreme"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/izbor_zivota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:text="@string/broj_ivota"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/radio_zivot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/zivot_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:text="@string/_1"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:checked="true" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/srce" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/zivot_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_2" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/srce" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/zivot_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_boja"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/_3" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/srce" />

            </LinearLayout>

        </RadioGroup>

        <View
            android:id="@+id/separator_zivot"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/zapocni"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/zapo_ni_igru"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="17dp"
            android:background="#4cbb17"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</LinearLayout>