<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:gravity="top|center"
    tools:context=".Igra"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/napotezuje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Na potezu je igrač "
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/igracime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/_ime"
            android:textColor="#4cbb17"
            android:textAllCaps="true"
            android:textSize="60sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/odbrojavanjevremena"
                android:layout_marginTop="2dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mojtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="vreme"
                    android:textColor="#fff"
                    android:textSize="105sp"
                    android:visibility="visible" />
            </LinearLayout>

            <ImageView
                android:id="@+id/slikaSlomljenoSrce"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignStart="@id/odbrojavanjevremena"
                android:layout_alignTop="@id/odbrojavanjevremena"
                android:layout_alignEnd="@id/odbrojavanjevremena"
                android:layout_alignBottom="@id/odbrojavanjevremena"
                android:layout_margin="1dp"
                android:gravity="center"
                android:src="@drawable/slomljeno_srce"
                android:visibility="invisible"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/slikaStop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignStart="@id/odbrojavanjevremena"
                android:layout_alignTop="@id/odbrojavanjevremena"
                android:layout_alignEnd="@id/odbrojavanjevremena"
                android:layout_alignBottom="@id/odbrojavanjevremena"
                android:layout_margin="1dp"
                android:gravity="center"
                android:src="@drawable/stop"
                android:visibility="invisible"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:id="@+id/stopirajdugme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/odbrojavanjevremena"
                android:layout_alignTop="@id/odbrojavanjevremena"
                android:layout_alignEnd="@id/odbrojavanjevremena"
                android:layout_alignBottom="@id/odbrojavanjevremena"
                android:layout_margin="1dp"
                android:gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/stop"
                android:visibility="invisible"
                android:background="#fff"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dadugme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="20dp"
                android:background="#4cbb17"
                android:drawableStart="@android:drawable/btn_star_big_on"
                android:drawableEnd="@android:drawable/btn_star_big_on"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="13dp"
                android:paddingStart="10dp"
                android:paddingEnd="12dp"
                android:text="  PEVAJ!  "
                android:visibility="invisible"
                android:textColor="#fff"
                android:textSize="20sp" />


            <Button
                android:id="@+id/nedugme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="20dp"
                android:background="#f00"
                android:drawableStart="@android:drawable/presence_busy"
                android:drawableEnd="@android:drawable/presence_busy"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="11dp"
                android:text=" ODUSTANI! "
                android:visibility="invisible"
                android:textColor="#fff"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/prikaz_zaustavljaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:visibility="invisible">
            <TextView
                android:id="@+id/igruzaustavlja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:text="@string/igru_zaustavlja_igrac"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/zaustavljacime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:text="@string/_ime"
                android:textColor="#f00"
                android:textAllCaps="true"
                android:textSize="40sp" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="0dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_weight="1"
            android:padding="15dp">
            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff"
                android:id="@+id/igraciTBL">
                <TableRow>
                    <TextView
                        android:text="@string/igrac"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/zivoti"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>